more porting work